tests/invalid/no-type-ascription.ts
import { assertIsType } from 'ts-audit';

// eslint-disable-next-line
const inferred = assertIsType({ key: 'thing', certType: 'application' });
